crates/gpui_tea/tests/ui/invalid_extract.stderr
error[E0308]: mismatched types
  --> tests/ui/invalid_extract.rs:48:58
   |
48 |     #[child(path = "child", lift = Msg::Child, extract = Msg::into_child)]
   |                                                          ^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn(Msg) -> Result<ChildMsg, Msg>`
                 found fn item `fn(Msg) -> std::option::Option<ChildMsg> {Msg::into_child}`
